Correction titre recette lasagne

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagnes à la bolognerse</a>
+    <a href="recipes/lasagna.html">Lasagnes à la bolognese</a>
     <a href="recipes/gateau_choco.html">Gateau au chocolat</a>
 </body>
 </html>
