MAJ des fichiers

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
     <title>Recette des lasagnes</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1>Lasagnes à la bolognese</h1>
     <img src="https://assets.afcdn.com/recipe/20200408/109520_w1024h1024c1cx1866cy2800.jpg" alt="Lasagne"/>
     <h2>Description</h2>
     <p>Bonjour, aujourd'hui, nous allons préparer des lasagnes à la bolognese.</p>
