--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Recettes préférées de Jay</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagnes à la bolognese</a>
-    <a href="recipes/gateau_choco.html">Gateau au chocolat</a>
+    <h1>Recettes préférées de Jay</h1>
+    <img src="https://i.ytimg.com/vi/yliQ1n78vwg/maxresdefault.jpg">
+    <p><a href="recipes/lasagna.html">Lasagnes à la bolognese</a></p>
+    <p><a href="recipes/gateau_choco.html">Gateau au chocolat</a></p>
 </body>
 </html>
